--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="cv.pdf" >CV</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="Publications.html">Publications</a></div>
+<div class="menu-item"><a href="publications.html">Publications</a></div>
 <!--div class="menu-item"><a href="talks.html">Talks</a></div-->
 </td>
 
