--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="CV.pdf" >CV</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="Publications.html">Publications</a></div>
+<div class="menu-item"><a href="publications.html">Publications</a></div>
 <!--div class="menu-item"><a href="talks.html">Talks</a></div-->
 </td>
 
@@ -47,7 +47,7 @@ ACM SIGCOMM 2016<br/>
 
 <li><p>
 <b>CARLOC: Precisely Tracking Automobile Position</b>
-<a href="./papers/carloc.pdf">[pdf]</a><a href="./papers/CarLoc_Sensys_pub.pptx">[pptx]</a><br/>
+<a href="./papers/carloc.pdf">[pdf]</a><a href="./slides/CarLoc_Sensys_pub.pptx">[pptx]</a><br/>
 <b>Yurong Jiang</b>, Hang Qiu, Matthew McCartney, Gaurav Sukhatme, Marco Gruteser, Fan Bai, Donald Grimm, Ramesh Govindan<br/>
 ACM Sensys 2015<br/>
 </p></li>
@@ -61,7 +61,7 @@ Passive and Active Measurement Conference (PAM), 2015<br/>
 
 <li><p>
 <b>CARLOG: A Platform for Flexible and Efficient Automotive Sensing</b>
-<a href="./papers/carlog.pdf">[pdf]</a><a href="./papers/CarLog_Sensys_jyr.pptx">[pptx]</a><br/>
+<a href="./papers/carlog.pdf">[pdf]</a><a href="./slides/CarLog_Sensys_jyr.pptx">[pptx]</a><br/>
 <b>Yurong Jiang</b>, Hang Qiu, Matthew McCartney, William G. J. Halfond, Fan Bai, Donald Grimm, Ramesh Govindan<br/>
 ACM Sensys 2014<br/>
 </p></li>
