--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 
 <li><p>
 <b>Locating and Tracking BLE Beacons with Smartphones</b>
-(to appear)<br/>
+(to appear)<a href="https://www.youtube.com/watch?v=556Io5MoJso">[Demo]</a><br/>
 Dongyao Chen, <b>Yurong Jiang</b>, Kang Shin, Kyu-Han Kim<br/>
 ACM CoNEXT 2017<br/>
 </p></li>
@@ -47,7 +47,7 @@ ACM SIGCOMM 2016<br/>
 
 <li><p>
 <b>CARLOC: Precisely Tracking Automobile Position</b>
-<a href="./papers/carloc.pdf">[pdf]</a><a href="./slides/CarLoc_Sensys_pub.pptx">[pptx]</a><br/>
+<a href="./papers/carloc.pdf">[pdf]</a><a href="./slides/CarLoc_Sensys_pub.pptx">[pptx]</a><a href="https://www.youtube.com/watch?v=WERATl2NIFE&t=4s">[Demo]</a><br/>
 <b>Yurong Jiang</b>, Hang Qiu, Matthew McCartney, Gaurav Sukhatme, Marco Gruteser, Fan Bai, Donald Grimm, Ramesh Govindan<br/>
 ACM Sensys 2015<br/>
 </p></li>
