--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,13 @@ ACM CoNEXT 2017<br/>
 </p></li>
 
 <li><p>
+<b>Towards Robust Vehicular Context Sensing</b> 
+<br/>
+Hang Qiu, Jinzhu Chen, Shubham Jain,  <b>Yurong Jiang</b>, Matt McCartney, Gorkem Kar, Fan Bai, Donald Grimm, Marco Gruteser, Ramesh Govindan<br/>
+IEEE Transactions on Vehicular Technology(TVT), 2017<br/>
+</p></li>
+
+<li><p>
 <b>WebPerf: Evaluating What-if Scenarios for Cloud-hosted Web Applications</b><br/>
 <b>Yurong Jiang</b>, Suman Nath, Lenin Ravindranath, Ramesh Govindan<br/>
 ACM SIGCOMM 2016<br/>
