--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 <img src="./img/me.jpg" alt="alt text" width="200px" height="245px" /></td>
 <td align="left">
 <p>
-Researcher<br/>
-<a href="https://www.labs.hpe.com/">Hewlett-Packard Labs</a><br/>
+Software Engineer<br/>
+<a href="https://linkedin.com/">Linkedin</a><br/>
 <br/>
-3000 Hanover St.
+950 W Maude Ave.
 <br/> 
-Palo Alto, CA 94304
+Sunnyvale, CA 94085
 <br/>
-Work Email: <img src="img/hpe.png" alt="email" height="24px" style="vertical-align:middle" /><br/>
+<!--Work Email: <img src="img/hpe.png" alt="email" height="24px" style="vertical-align:middle" /><br/-->
 Personal Email: <img src="img/gmail.png" alt="email" height="24px" style="vertical-align:middle" /><br/>
 <br/>
 
@@ -60,13 +60,13 @@ Find me at&nbsp;
 
 <h2>About Me</h2>
 
-I'm a researcher in Hewlett-Packard Labs. 
+I'm a Software Engineer in Linkedin. 
 I received my Ph.D from <a href="http://www.cs.usc.edu/">Computer Science Department</a>, <a href="http://www.usc.edu/">University of Southern California (USC)</a> in 2016.   Before that,
     I obtained my B.S degree (with honor) from Academic Talent Program (基科) of <a href="http://www.phys.tsinghua.edu.cn/">Physics Department</a> at <a href="http://www.tsinghua.edu.cn/">Tsinghua University</a>. 
 
 <h2>Research Interests</h2>
 <p>
-I am broadly interested in Mobile Computing, Cloud Computing and Deep Learning Systems. I enjoy building end-to-end system to solve interesting real world problems.
+I am broadly interested in Mobile Computing, Distributed Systems and Deep Learning Systems. I enjoy building end-to-end system to solve interesting real world problems.
 My Ph.D. thesis focuses on crowdsourcing in highly mobile environments.<br/>
 </p>
 
