--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ My Ph.D. thesis focuses on crowdsourcing in highly mobile environments.<br/>
 <h2>News</h2>
 <ul>
 <li><p>
-Oct. 2017&nbsp;&nbsp; Vehicular Context Sensing accepted to IEEE Transactions on Vehicular Technology</a>
+Oct. 2017&nbsp;&nbsp; TAR - Enabling Fine Grained Targeted Advertising in Retail Stores accepted to Mobisys 2018 </a>
 </p></li>
 <li><p>
-Sept. 2017&nbsp;&nbsp; BlueProx accepted to <a href="http://conferences2.sigcomm.org/co-next/2017/">CoNEXT'17</a>
+Oct. 2017&nbsp;&nbsp; Vehicular Context Sensing accepted to IEEE Transactions on Vehicular Technology</a>
 </p></li>
 </ul>
 
