--- a/publications.html
+++ b/publications.html
@@ -31,10 +31,16 @@
 
 <h2>Papers</h2>
 <ol>
-
+<li><p>
+<b>TAR – Enabling Fine Grained Targeted Advertising in Retail Stores</b> (to appear)
+<a href="https://vimeo.com/246368580">[Demo1]</a><a href="https://vimeo.com/246388147">[Demo2]</a><br/>
+Xiaochen Liu, <b>Yurong Jiang</b>, Puneet Jain, Kyu-Han Kim<br/>
+ACM Mobisys 2018<br/>
+</p></li>
+  
 <li><p>
 <b>Locating and Tracking BLE Beacons with Smartphones</b>
-(to appear)<a href="https://www.youtube.com/watch?v=556Io5MoJso">[Demo]</a><br/>
+<a href="https://www.youtube.com/watch?v=556Io5MoJso">[Demo]</a><br/>
 Dongyao Chen, <b>Yurong Jiang</b>, Kang Shin, Kyu-Han Kim<br/>
 ACM CoNEXT 2017<br/>
 </p></li>
