--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <td id="layout-menu">
 <div class="menu-category">Yurong Jiang</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="cv.pdf" >CV</a></div>
+<!--div class="menu-item"><a href="cv.pdf" >CV</a></div-->
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <!--div class="menu-item"><a href="talks.html">Talks</a></div-->
