--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ I received my Ph.D from <a href="http://www.cs.usc.edu/">Computer Science Depart
 
 <h2>Research Interests</h2>
 <p>
-I am broadly interested in Mobile Computing, Distributed Systems and Deep Learning Systems. I enjoy building end-to-end system to solve interesting real world problems.
+I am broadly interested in Deep Learning Systems, Distributed Systems and Mobile Computing. I enjoy exploring open-end problems and building end-to-end system to solve interesting real world problems.
 My Ph.D. thesis focuses on crowdsourcing in highly mobile environments.<br/>
 </p>
 
