--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img src="./img/me.jpg" alt="alt text" width="200px" height="245px" /></td>
 <td align="left">
 <p>
-Software Engineer<br/>
+Senior Software Engineer<br/>
 <a href="https://linkedin.com/">Linkedin</a><br/>
 <br/>
 950 W Maude Ave.
@@ -73,10 +73,13 @@ My Ph.D. thesis focuses on crowdsourcing in highly mobile environments.<br/>
 <h2>News</h2>
 <ul>
 <li><p>
-Feb. 2018&nbsp;&nbsp; TAR - Enabling Fine Grained Targeted Advertising in Retail Stores accepted to Mobisys 2018 </a>
+Sept. 2018&nbsp;&nbsp; TPC for ICC 2019 </a>
 </p></li>
 <li><p>
-Oct. 2017&nbsp;&nbsp; Vehicular Context Sensing accepted to IEEE Transactions on Vehicular Technology</a>
+Jul. 2018&nbsp;&nbsp; TPC for AAAI 2019 </a>
+</p></li>
+<li><p>
+Feb. 2018&nbsp;&nbsp; TAR - Enabling Fine Grained Targeted Advertising in Retail Stores accepted to Mobisys 2018 </a>
 </p></li>
 </ul>
 
