update latest news
update

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ My Ph.D. thesis focuses on crowdsourcing in highly mobile environments.<br/>
 <h2>News</h2>
 <ul>
 <li><p>
+Feb. 2019&nbsp;&nbsp; TPC for IJCAI 2019 </a>
+</p></li>
+<li><p>
 Sept. 2018&nbsp;&nbsp; TPC for ICC 2019 </a>
 </p></li>
 <li><p>
 Jul. 2018&nbsp;&nbsp; TPC for AAAI 2019 </a>
-</p></li>
-<li><p>
-Feb. 2018&nbsp;&nbsp; TAR - Enabling Fine Grained Targeted Advertising in Retail Stores accepted to Mobisys 2018 </a>
 </p></li>
 </ul>
 
