--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img src="./img/me.jpg" alt="alt text" width="200px" height="245px" /></td>
 <td align="left">
 <p>
-Senior Software Engineer<br/>
+Staff Software Engineer<br/>
 <a href="https://linkedin.com/">Linkedin</a><br/>
 <br/>
 950 W Maude Ave.
